Add users resource
